--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "common-gateway/pet-store-bundle",
-    "description": "An example package for creating symfony flex bundles as plugins",
+    "name": "common-gateway/huwelijk-vrijbrp-bundle",
+    "description": "A vrijBRP bundle for Huwelijkszaken",
     "type": "symfony-bundle",
     "keywords": [
         "commongateway",
@@ -9,7 +9,8 @@
         "conduction",
         "symfony",
         "common-gateway-plugin",
-        "pet store"
+        "huwelijk",
+        "vrijBRP"
     ],
     "homepage": "https://commongateway.nl",
     "license": "EUPL-1.2",
@@ -23,12 +24,12 @@
     },
     "autoload": {
         "psr-4": {
-            "CommonGateway\\PetStoreBundle\\": ""
+            "CommonGateway\\HuwelijkVrijBRPBundle\\": ""
         }
     },
     "scripts": {
-        "post-package-install": "bin/console common-gateway/pet-store-bundle",
-        "post-package-update": "bin/console common-gateway/pet-store-bundle",
-        "post-package-uninstall": "bin/console common-gateway/pet-store-bundle"
+        "post-package-install": "bin/console common-gateway/huwelijk-vrijbrp-bundle",
+        "post-package-update": "bin/console common-gateway/huwelijk-vrijbrp-bundle",
+        "post-package-uninstall": "bin/console common-gateway/huwelijk-vrijbrp-bundle"
     }
 }
