Added some basics (and better example code)

--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,17 @@
         "conduction",
         "symfony",
         "common-gateway-plugin",
-        "huwelijk",
-        "vrijBRP"
+        "vrijbrp",
+        "e-dienst",
+        "huwelijk"
     ],
     "homepage": "https://commongateway.nl",
     "license": "EUPL-1.2",
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.4",
-        "commongateway/corebundle": "dev-master"
+        "commongateway/corebundle": "dev-master",
+        "common-gateway/zgw-bundle": "^0.1"
     },
     "require-dev": {
         "symfony/dependency-injection": "~3.4|~4.1|~5.0"
